--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,6 +29,7 @@
                 app:civ_border_width="2dp"/>
 
             <ImageView
+                android:id="@+id/edit_profile_image"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:layout_alignParentTop="true"
