--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -107,6 +107,26 @@
 
     </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
 
+        <studio.carbonylgroup.textfieldboxes.TextFieldBoxes
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:labelText="Номер телефона"
+            app:useDenseSpacing="true"
+            app:hasClearButton="true"
+            app:panelBackgroundColor="@android:color/white"
+            android:layout_margin="5dp"
+            app:iconSignifier="@drawable/ic_person"
+            app:maxCharacters="12"
+            >
+
+            <studio.carbonylgroup.textfieldboxes.ExtendedEditText
+                android:id="@+id/phoneNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
+
     <mehdi.sakout.fancybuttons.FancyButton
         android:id="@+id/register_new_user_button"
         android:layout_width="wrap_content"
