--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -15,7 +15,7 @@
         <RelativeLayout
             android:background="@drawable/gradient_theme"
             android:layout_width="match_parent"
-            android:layout_height="250dp"
+            android:layout_height="270dp"
             android:orientation="vertical">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
@@ -48,6 +48,19 @@
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:textSize="21sp"/>
+
+            <TextView
+                android:id="@+id/phoneNumberId"
+                android:layout_marginTop="7dp"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/text_view_profile_username"
+                android:layout_centerHorizontal="true"
+                android:text="qwdqwdqwd"
+                android:textColor="#fff"
+                android:textStyle="bold"
+                android:textSize="21sp"/>
         </RelativeLayout>
         <android.support.v7.widget.CardView
             android:layout_width="400dp"
@@ -66,6 +79,8 @@
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="match_parent">
+
+
                     <TextView
                         android:textColor="@color/colorPrimaryDark"
                         android:layout_width="wrap_content"
