--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -123,6 +123,8 @@
                 android:id="@+id/phoneNumber"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLength="12"
+                android:inputType="phone"
                 />
 
         </studio.carbonylgroup.textfieldboxes.TextFieldBoxes>
