--- a/app/src/main/res/layout/activity_reviews.xml
+++ b/app/src/main/res/layout/activity_reviews.xml
@@ -67,6 +67,8 @@
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
+        android:layout_marginTop="13dp"
+        android:layout_marginLeft="13dp"
         android:layout_below="@id/revBut"
         android:id="@+id/recycler_view"
         android:layout_height="match_parent"
