--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -19,11 +19,10 @@
             android:orientation="vertical">
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile_image"
-                android:layout_marginTop="45dp"
-                android:layout_gravity="center_horizontal"
-                android:layout_centerInParent="true"
-                android:layout_width="120dp"
-                android:layout_height="120dp"
+                android:layout_marginTop="33dp"
+                android:layout_centerHorizontal="true"
+                android:layout_width="155dp"
+                android:layout_height="155dp"
                 android:src="@drawable/logo"
                 app:civ_border_color="@android:color/white"
                 app:civ_border_width="2dp"/>
@@ -44,7 +43,7 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/profile_image"
                 android:layout_centerHorizontal="true"
-                android:text="Wiliam Snoe"
+
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:textSize="21sp"/>
@@ -57,7 +56,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/text_view_profile_username"
                 android:layout_centerHorizontal="true"
-                android:text="qwdqwdqwd"
                 android:textColor="#fff"
                 android:textStyle="bold"
                 android:textSize="21sp"/>
